--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
     <script src="p5.js"></script>
     <script src="p5.dom.min.js"></script>
     <script src="p5.sound.min.js"></script>
-<script src="./p5.play.js"></script>
+    <script src="./p5.play.js"></script>
+    <script src="matter.js"></script>
+    <script src="division.js"></script>
+    <script src="ground.js"></script>
+    <script src="particles.js"></script>
+    <script src="plinko.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
